--- a/vagrant/roles/nodes/tasks/main.yml
+++ b/vagrant/roles/nodes/tasks/main.yml
@@ -45,7 +45,7 @@
 
 - block:
   - name: kubeadm join with master
-    command: kubeadm join --skip-preflight-checks --token={{ kubernetes_token }} {{ hostvars['master'].ansible_eth1.ipv4.address }}:6443
+    command: kubeadm join --skip-preflight-checks --discovery-token-unsafe-skip-ca-verification --token={{ kubernetes_token }} {{ hostvars['master'].ansible_eth1.ipv4.address }}:6443
 
   - name: create root kube dir on node
     file:
