--- a/vagrant/roles/master/tasks/main.yml
+++ b/vagrant/roles/master/tasks/main.yml
@@ -72,7 +72,7 @@
     timeout: 60
 
 - name: create weave network
-  command: kubectl apply -f https://git.io/weave-kube-1.6
+  command: kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
 
 # jsonpath tested with kubeadm 1.6, 1.7, 1.8 
 - name: get dns service address
