--- a/kubespray/Vagrantfile
+++ b/kubespray/Vagrantfile
@@ -70,7 +70,7 @@ Vagrant.configure("2") do |config|
 
       (0..DISKS-1).each do |d|
           driverletters = ('b'..'z').to_a
-          lv.storage :file, :device => "vd#{driverletters[d]}", :path => "gluster-disk-#{d}.disk", :size => '1024G'
+          lv.storage :file, :device => "vd#{driverletters[d]}", :path => "kubespray-gluster-disk-#{d}.disk", :size => '1024G'
       end
 
   end
@@ -78,8 +78,8 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
   # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline: <<-SHELL
-  #   apt-get update
-  #   apt-get install -y apache2
-  # SHELL
+  config.vm.provision "shell", inline: <<-SHELL
+    cd /vagrant
+    sudo sh -x /vagrant/setup-kubespray.sh
+  SHELL
 end
